--- a/landingpage.html
+++ b/landingpage.html
@@ -35,6 +35,14 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
+  <!--
+    Group 1: 
+      1.  MUHAMMAD ARIEF BIN MOHD RAFIE (SX210497ECJHS04)
+      2.  AIMI ZAFIRAH BINTI MISMAN
+      3.  TAMIL SELVAM A/L SUPARAMANIAM
+      4.  SARASWATHI A/P PANJANATHAN
+    -->
 </head>
 
 <body>
@@ -111,6 +119,7 @@
             </div>
           </div>
           
+          <!--someone to decode this potion-->
           <div class="col-lg-8 d-flex align-items-stretch">
             <div class="icon-boxes d-flex flex-column justify-content-center">
               <div class="row">
@@ -136,7 +145,8 @@
                   </div>
                 </div>
               </div>
-            </div><!-- End .content-->
+            </div>
+            <!-- End .content-->
           </div>
         </div>
 
