update landing page 2

--- a/landingpage.html
+++ b/landingpage.html
@@ -548,9 +548,10 @@
           <div class="col-lg-12 col-md-12 footer-contact">
             <h3>Medilab</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
+              Aras G, Residensi UTMKL<br>
+              No.8 Jalan Maktab<br>
+              54000 Kuala Lumpur<br>
+              Wilayah Persekutuan Kuala Lumpur<br><br>
               <strong>Phone:</strong> +603 2728 6500<br>
               <strong>Email:</strong> <a href="mailto:support@medilab.com">support@medilab.com</a><br>
             </p>
